<resources>
    <string name="app_name">Погода</string>

    <string name="clear_sky">Ясное небо</string>
    <string name="mainly_clear">В основном ясно</string>
    <string name="partly_cloudy">Переменная облачность</string>
    <string name="overcast">Пасмурно</string>
    <string name="foggy">Туманно</string>
    <string name="depositing_rime_fog">Изморозевый туман</string>
    <string name="light_drizzle">Легкая морось</string>
    <string name="moderate_drizzle">Умеренная морось</string>
    <string name="dense_drizzle">Плотная морось</string>
    <string name="light_freezing_drizzle">Легкий замораживающий морось</string>
    <string name="dense_freezing_drizzle">Плотный замораживающий морось</string>
    <string name="slight_rain">Небольшой дождь</string>
    <string name="moderate_rain">Умеренный дождь</string>
    <string name="heavy_rain">Сильный дождь</string>
    <string name="light_freezing_rain">Легкий замораживающий дождь</string>
    <string name="heavy_freezing_rain">Сильный замораживающий дождь</string>
    <string name="slight_snow_fall">Небольшой снегопад</string>
    <string name="moderate_snow_fall">Умеренный снегопад</string>
    <string name="heavy_snow_fall">Сильный снегопад</string>
    <string name="snow_grains">Снежные зерна</string>
    <string name="slight_rain_shower">Небольшой ливень</string>
    <string name="moderate_rain_shower">Умеренный ливень</string>
    <string name="violent_rain_shower">Сильный ливень</string>
    <string name="slight_snow_shower">Небольшой снегопад</string>
    <string name="heavy_snow_shower">Сильный снегопад</string>
    <string name="thunderstorm">Гроза</string>
    <string name="slight_thunderstorm_hail">Небольшая гроза с градом</string>
    <string name="heavy_thunderstorm_hail">Сильная гроза с градом</string>
    <string name="welcome_to_app">Добро пожаловать в приложение Погода!</string>
    <string name="guide_user">Приготовьтесь к изумительной точности нашего погодного приложения.</string>
    <string name="version_name">Версия 1.0.0</string>
    <string name="turn_on_network_prompt"><![CDATA[Включите Интернет &\nПотяните вниз экран, чтобы повторить попытку!]]></string>
    <string name="enable_gps_prompt"><![CDATA[Включите GPS, пожалуйста &\nПотяните вниз экран, чтобы продолжить!]]></string>
    <string name="grant_location_permission_prompt"><![CDATA[Предоставьте разрешение на местоположение &\nВключите GPS, пожалуйста!]]></string>
    <string name="grant_location_permission">Предоставить разрешение</string>
    <string name="stay_informed"><![CDATA[Будьте в курсе и подготовлены с точными прогнозами погоды у вас под рукой.]]></string>

    <string name="day_and_date_sample">Суббота, 20 апреля</string>
    <string name="address_name_sample">Лондон, Великобритания</string>
    <string name="is_day_sample">Сегодня ночью</string>
    <string name="is_day_true">Дневное время</string>
    <string name="is_day_false">Сегодня ночью</string>
    <string name="current_temperature_sample">27 °C</string>
    <string name="current_apparent_temperature_sample">Ощущается как 32 °C</string>
    <string name="current_apparent_temperature_label">Ощущается как</string>
    <string name="precipitation_probability_sample">58 %</string>
    <string name="wind_speed_sample">9.8 км/ч</string>
    <string name="rain_sum_sample">11 мм</string>
    <string name="today">Сегодня</string>
    <string name="next_7_days">Следующие 7 дней</string>
    <string name="hour_time_sample">02:00</string>
    <string name="hourly_temperature_sample">18 °C</string>
    <string name="search_hint">Поиск города</string>
    <string name="week_day_short_sample">Пн</string>
    <string name="week_date_short_sample">27</string>
    <string name="week_date_sample">20 апреля</string>
    <string name="week_day_sample">Понедельник</string>
    <string name="week_day_max_temperature_sample">22</string>
    <string name="week_day_min_temperature_sample">/17 °C</string>
    <string name="pick_location">Выберите местоположение</string>
    <string name="pick_location_guide">Найдите район или город, о котором вы хотите узнать подробную информацию о погоде в настоящее время</string>
    <string name="version">Версия</string>
    <string name="error">Ошибка</string>
    <string name="network_connection_available">Интернет подключен…</string>
    <string name="network_connection_unavailable">Интернет отключен!</string>
    <string name="settings">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="language_uzbek">Узбекский</string>
    <string name="language_english">Английский</string>
    <string name="language_russian">Русский</string>

</resources>