<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="?attr/actionBarSize"
    android:background="@null"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
    tools:context=".ui.current_weather.bottom_sheet_fragment.SettingsBottomSheetDialogFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/settings_bottom_sheet_dialog_bg"
        android:elevation="10dp"
        android:paddingBottom="120dp">

        <TextView
            android:id="@+id/settingsTextView"
            style="@style/Widget.Today.TextView.TextAppearance"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:maxLines="1"
            android:padding="12dp"
            android:text="@string/settings"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/darkThemeSwitch"
            style="@style/Widget.Today.TextView.TextAppearance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="16sp"
            android:background="@drawable/search_location_rv_bg"
            android:checked="false"
            android:elevation="6dp"
            android:paddingStart="24dp"
            android:paddingTop="12dp"
            android:paddingEnd="24dp"
            android:paddingBottom="12dp"
            android:text="@string/dark_theme"
            android:textSize="22sp"
            android:textStyle="normal"
            android:theme="@style/BrandedSwitch.control"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/settingsTextView"
            app:thumbTint="@color/material_green_300"
            app:trackTint="@color/material_green_100" />

        <TextView
            android:id="@+id/language_uzbek_text_view"
            style="@style/Widget.Today.TextView.TextAppearance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16sp"
            android:background="@drawable/search_location_rv_bg"
            android:drawableStart="@drawable/uz_flag"
            android:drawablePadding="12dp"
            android:elevation="6dp"
            android:gravity="center_vertical"
            android:paddingStart="24dp"
            android:paddingTop="12dp"
            android:paddingEnd="24dp"
            android:paddingBottom="12dp"
            android:text="@string/language_uzbek"
            android:textSize="22sp"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/darkThemeSwitch"
            tools:ignore="UseCompatTextViewDrawableXml" />

        <TextView
            android:id="@+id/languageRussianTextView"
            style="@style/Widget.Today.TextView.TextAppearance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16sp"
            android:background="@drawable/search_location_rv_bg"
            android:drawableStart="@drawable/ru_flag"
            android:drawablePadding="12dp"
            android:elevation="6dp"
            android:paddingStart="24dp"
            android:paddingTop="12dp"
            android:paddingEnd="24dp"
            android:paddingBottom="12dp"
            android:text="@string/language_russian"
            android:textSize="22sp"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/language_uzbek_text_view"
            tools:ignore="UseCompatTextViewDrawableXml" />

        <TextView
            android:id="@+id/languageEnTextView"
            style="@style/Widget.Today.TextView.TextAppearance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16sp"
            android:layout_marginBottom="12dp"
            android:background="@drawable/search_location_rv_bg"
            android:drawableStart="@drawable/uk_flag"
            android:drawablePadding="12dp"
            android:elevation="6dp"
            android:paddingStart="24dp"
            android:paddingTop="12dp"
            android:paddingEnd="24dp"
            android:paddingBottom="12dp"
            android:text="@string/language_english"
            android:textSize="22sp"
            android:textStyle="normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/languageRussianTextView"
            tools:ignore="UseCompatTextViewDrawableXml" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>