<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swipeRefreshLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/current_weather_screen_bg"
    tools:context=".ui.current_weather.CurrentWeatherFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:id="@+id/filterIconCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="50dp"
            app:cardElevation="6dp"
            app:cardMaxElevation="8dp"
            app:layout_constraintStart_toStartOf="@id/verticalGuideline8"
            app:layout_constraintTop_toTopOf="@id/horizontalGuideline6">

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/lottieFilterAnimation"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:background="@color/filter_icon_background_color"
                android:padding="8dp"
                app:layout_constraintDimensionRatio="1:1"
                app:lottie_autoPlay="true"
                app:lottie_fileName="icon_filter.json"
                app:lottie_loop="true" />

        </androidx.cardview.widget.CardView>

        <TextView
            style="@style/Widget.CurrentApparentTemperature.TextView.TextAppearance"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:background="@drawable/current_weather_probabilities_bg"
            android:drawablePadding="16sp"
            android:elevation="6dp"
            android:gravity="center_vertical"
            android:padding="10dp"
            android:text="@string/search_hint"
            android:textSize="18sp"
            android:textStyle="italic"
            app:drawableStartCompat="@drawable/ic_search_location"
            app:layout_constraintBottom_toBottomOf="@id/filterIconCard"
            app:layout_constraintEnd_toEndOf="@id/verticalGuideline92"
            app:layout_constraintStart_toEndOf="@id/filterIconCard"
            app:layout_constraintTop_toTopOf="@id/filterIconCard" />

        <TextView
            android:id="@+id/addressNameTextView"
            style="@style/Widget.Today.TextView.TextAppearance"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="16dp"
            android:text="@string/address_name_sample"
            android:textSize="22sp"
            app:layout_constraintBottom_toTopOf="@id/currentDayAndDateTextView"
            app:layout_constraintEnd_toStartOf="@id/currentLocationIconCard"
            app:layout_constraintStart_toStartOf="@id/verticalGuideline8"
            app:layout_constraintTop_toTopOf="@id/currentLocationIconCard" />

        <TextView
            android:id="@+id/currentDayAndDateTextView"
            style="@style/Widget.IsDay.TextView.TextAppearance"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/day_and_date_sample"
            android:textColor="@color/current_apparent_temperature_text_color"
            app:layout_constraintBottom_toBottomOf="@id/currentLocationIconCard"
            app:layout_constraintEnd_toEndOf="@id/addressNameTextView"
            app:layout_constraintStart_toStartOf="@id/addressNameTextView"
            app:layout_constraintTop_toBottomOf="@id/addressNameTextView" />

        <androidx.cardview.widget.CardView
            android:id="@+id/currentLocationIconCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:cardCornerRadius="16dp"
            app:cardElevation="8dp"
            app:cardMaxElevation="12dp"
            app:layout_constraintEnd_toEndOf="@id/verticalGuideline92"
            app:layout_constraintTop_toBottomOf="@id/filterIconCard">

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/lottieCurrentLocationAnimation"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:padding="8dp"
                app:layout_constraintDimensionRatio="1:1"
                app:lottie_autoPlay="true"
                app:lottie_fileName="current_location.json"
                app:lottie_loop="true" />

        </androidx.cardview.widget.CardView>

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lottieCurrentWeatherCodeAnimation"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="-32dp"
            android:elevation="16dp"
            android:padding="8dp"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintStart_toStartOf="@id/currentWeatherCard"
            app:layout_constraintTop_toTopOf="@id/currentWeatherCard"
            app:lottie_autoPlay="true"
            app:lottie_fileName="heavy_rain.json"
            app:lottie_loop="true" />

        <androidx.cardview.widget.CardView
            android:id="@+id/currentWeatherCard"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:cardCornerRadius="24dp"
            app:cardElevation="10dp"
            app:cardMaxElevation="12dp"
            app:cardUseCompatPadding="false"
            app:layout_constraintBottom_toBottomOf="@id/horizontalGuideline50"
            app:layout_constraintEnd_toEndOf="@id/verticalGuideline92"
            app:layout_constraintStart_toStartOf="@id/verticalGuideline8">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/current_weather_card_bg"
                android:padding="12dp">

                <TextView
                    android:id="@+id/currentWeatherCodeTextView"
                    style="@style/Widget.CurrentWeatherCode.TextView.TextAppearance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/heavy_rain"
                    app:layout_constraintBottom_toTopOf="@id/isDayTextView"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/currentApparentTemperatureTextView" />

                <TextView
                    android:id="@+id/isDayTextView"
                    style="@style/Widget.IsDay.TextView.TextAppearance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/is_day_sample"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/currentTemperatureTextView"
                    style="@style/Widget.CurrentTemperature.TextView.TextAppearance"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/current_temperature_sample"
                    app:layout_constraintBottom_toTopOf="@id/currentApparentTemperatureTextView"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@id/currentApparentTemperatureTextView"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/currentApparentTemperatureTextView"
                    style="@style/Widget.CurrentApparentTemperature.TextView.TextAppearance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="24dp"
                    android:text="@string/current_apparent_temperature_sample"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/currentTemperatureTextView" />

                <com.airbnb.lottie.LottieAnimationView
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginStart="48dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="4dp"
                    android:elevation="4dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@id/currentApparentTemperatureTextView"
                    app:layout_constraintStart_toEndOf="@id/currentWeatherCodeTextView"
                    app:layout_constraintTop_toBottomOf="@id/currentApparentTemperatureTextView"
                    app:lottie_autoPlay="true"
                    app:lottie_fileName="wind_speed.json"
                    app:lottie_loop="true" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:id="@+id/currentWeatherProbabilitiesLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="@id/verticalGuideline92"
            app:layout_constraintStart_toStartOf="@id/verticalGuideline8"
            app:layout_constraintTop_toBottomOf="@id/horizontalGuideline50">

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <com.airbnb.lottie.LottieAnimationView
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    android:background="@drawable/current_weather_probabilities_bg"
                    android:elevation="4dp"
                    app:lottie_autoPlay="true"
                    app:lottie_fileName="precipitation.json"
                    app:lottie_loop="true" />

                <TextView
                    android:id="@+id/precipitationProbabilityTextView"
                    style="@style/Widget.CurrentWeatherProbabilities.TextView.TextAppearance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/precipitation_probability_sample" />

            </LinearLayout>

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <com.airbnb.lottie.LottieAnimationView
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    android:background="@drawable/current_weather_probabilities_bg"
                    android:elevation="4dp"
                    app:lottie_autoPlay="true"
                    app:lottie_fileName="wind_speed.json"
                    app:lottie_loop="true" />

                <TextView
                    android:id="@+id/windSpeedTextView"
                    style="@style/Widget.CurrentWeatherProbabilities.TextView.TextAppearance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/wind_speed_sample" />

            </LinearLayout>

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <com.airbnb.lottie.LottieAnimationView
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    android:background="@drawable/current_weather_probabilities_bg"
                    android:elevation="4dp"
                    app:lottie_autoPlay="true"
                    app:lottie_fileName="light_drizzle.json"
                    app:lottie_loop="true" />

                <TextView
                    android:id="@+id/rainSumTextView"
                    style="@style/Widget.CurrentWeatherProbabilities.TextView.TextAppearance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rain_sum_sample" />

            </LinearLayout>

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

        </LinearLayout>

        <TextView
            android:id="@+id/todayLabel"
            style="@style/Widget.Today.TextView.TextAppearance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/today"
            app:layout_constraintStart_toStartOf="@id/verticalGuideline8"
            app:layout_constraintTop_toBottomOf="@id/currentWeatherProbabilitiesLayout" />

        <TextView
            android:id="@+id/nextSevenDaysTextView"
            style="@style/Widget.NextSevenDays.TextView.TextAppearance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next_7_days"
            app:drawableRightCompat="@drawable/ic_arrow_forward"
            app:layout_constraintBottom_toBottomOf="@id/todayLabel"
            app:layout_constraintEnd_toEndOf="@id/verticalGuideline92"
            app:layout_constraintTop_toTopOf="@id/todayLabel" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/hourlyWeatherRecyclerView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:background="@drawable/current_weather_probabilities_bg"
            android:orientation="horizontal"
            android:paddingStart="8dp"
            android:paddingTop="12dp"
            android:paddingEnd="8dp"
            android:paddingBottom="12dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="@id/horizontalGuideline96"
            app:layout_constraintEnd_toEndOf="@id/verticalGuideline92"
            app:layout_constraintStart_toStartOf="@id/verticalGuideline8"
            app:layout_constraintTop_toBottomOf="@id/todayLabel"
            tools:listitem="@layout/hourly_weather_rv_item" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/verticalGuideline8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.08" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/verticalGuideline92"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.92" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/horizontalGuideline50"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.50" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/horizontalGuideline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.06" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/horizontalGuideline96"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.96" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>